fix: Composer Scrollbar display - MEED-1945 - Meeds-io/meeds#802

--- a/commons-extension-webapp/src/main/webapp/ckeditorCustom/contents.css
+++ b/commons-extension-webapp/src/main/webapp/ckeditorCustom/contents.css
@@ -18,6 +18,7 @@ body
 	/* Font */
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 12px;
+	overflow: auto;
 
 	/* Text color */
 	color: #333;
